other-vpol/restrict-jobs/.kyverno-test-exceptions/partial-resource.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: otherbadjob
  namespace: default
spec:
  template:
    spec:
      containers:
        - name: busybox
          image: busybox:1.35
      restartPolicy: Never
