other-vpol/restrict-jobs/.kyverno-test-exceptions/wrong-token-resource.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: wrong-token-job
  namespace: default
spec:
  template:
    spec:
      containers:
        - name: busybox
          image: busybox:1.35
      restartPolicy: Never
